--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: npm i
+      - run: npx mustache data.json index.html.mustache > index.html
       - run: npx playwright install
       - run: npx playwright pdf ./index.html index.pdf
       - name: Upload a Build Artifact
